crates/ts/tests/snapshots/baseline_diff__baseline_type_parameter_removed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: "Removed(TypeParameter { name: \"U\" })"
  is_breaking: true
  description: "Type parameter `U` was removed from `f`"
  before: U
  after: ~
  has_migration_target: false
