crates/ts/tests/snapshots/baseline_diff__baseline_visibility_increased.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: Changed(Visibility)
  is_breaking: false
  description: "Visibility of `f` was increased from Internal to Exported"
  before: Internal
  after: Exported
  has_migration_target: false
