crates/ts/tests/snapshots/baseline_diff__baseline_visibility_reduced.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: Changed(Visibility)
  is_breaking: true
  description: "Visibility of `f` was reduced from Exported to Internal"
  before: Exported
  after: Internal
  has_migration_target: false
